--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Note Taker that can be used to write and save notes.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
